--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <div id="container">
   </div>
 
+  <script type="text/template" id="count-header">
+    <h3>There are <%= num %> total links!</h3>
+  </script>
+
   <script type="text/template" id="link-template">
     <strong><%= title %></strong> - (<%= url %>) 
     <br>
